# json-commander

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  json-commander-config.cmake.in
.github/workflows/: ci.yml
cmake/: commander_deps.cmake  json_commander_add_executable.cmake  json_commander_deps.cmake  json_commander_generate_codegen.cmake
commander/: CMakeLists.txt  arg.hpp  cmd.hpp  config.hpp.in  config_schema.hpp  conv.hpp  manpage.hpp  model.hpp  model_json.hpp  parse.hpp  schema_loader.hpp  validate.hpp
commander/schema/: commander.schema.json
commander_testing/: CMakeLists.txt  arg_test.cpp  cmd_test.cpp  config_schema_test.cpp  conv_test.cpp  manpage_test.cpp  metaschema_test.cpp  model_test.cpp  parse_test.cpp  schema_loader_test.cpp  validate_test.cpp
examples/: CMakeLists.txt
examples/fake-git/: CMakeLists.txt  fake-git.cpp  fake-git.json
examples/greet/: CMakeLists.txt  greet.cpp
examples/greet-c/: CMakeLists.txt  greet-c.c
examples/serve/: CMakeLists.txt  serve.cpp  serve.json
examples/serve-c/: CMakeLists.txt  serve-c.c
json_commander/: CMakeLists.txt  arg.hpp  cmd.hpp  config.hpp.in  config_schema.hpp  conv.hpp  manpage.hpp  model.hpp  model_json.hpp  parse.hpp  run.hpp  schema_loader.hpp  validate.hpp
json_commander/schema/: json_commander.schema.json
json_commander_c/: CMakeLists.txt  json_commander.cpp  json_commander.h
json_commander_c_testing/: CMakeLists.txt  c_api_test.c
json_commander_testing/: CMakeLists.txt  arg_test.cpp  cmd_test.cpp  config_schema_test.cpp  conv_test.cpp  manpage_test.cpp  metaschema_test.cpp  model_test.cpp  parse_test.cpp  run_test.cpp  schema_loader_test.cpp  validate_test.cpp
scripts/: check-format.sh
tools/: CMakeLists.txt  commander.cpp  commander.json  json_commander.cpp  json_commander.json
tools/config-schema/: CMakeLists.txt  config_schema_tool.cpp
